Fixed the footer text alignment issue.

--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -59,7 +59,6 @@ body
 #footer
   width: $main_col_width
   background-color: $black
-  height: 90px
   color: $white
   font-weight: $font_weight
   margin: 0 0 30px 0
@@ -68,7 +67,7 @@ body
     text-align: right
     vertical-align: bottom
     margin: 0
-    padding: 10px
+    padding: 70px 10px 10px 10px
     height: 100% 
     
     a
